@@ -6,6 +6,20 @@ plugins {
 group = "github.renderbr.hytale"
 version = "0.3.1"
 
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(25))
+    }
+}
+
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType<Test> {
+    jvmArgs("--enable-preview")
+}
+
 repositories {
     mavenCentral()
     maven {
